@startuml

title __CHAINOFRESPONSABILITY's Class Diagram__\n

  namespace org.example {
    namespace behavioral.chainofresponsability {
      interface org.example.behavioral.chainofresponsability.ApprovalLoanChain {
          {abstract} + creditCardRequest()
          {abstract} + getNext()
          {abstract} + setNext()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.chainofresponsability {
      class org.example.behavioral.chainofresponsability.Black {
          + creditCardRequest()
          + getNext()
          + setNext()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.chainofresponsability {
      class org.example.behavioral.chainofresponsability.CardChain {
          + creditCardRequest()
          + getNext()
          + setNext()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.chainofresponsability {
      class org.example.behavioral.chainofresponsability.Gold {
          + creditCardRequest()
          + getNext()
          + setNext()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.chainofresponsability {
      class org.example.behavioral.chainofresponsability.Platinium {
          + creditCardRequest()
          + getNext()
          + setNext()
      }
    }
  }
  

  org.example.behavioral.chainofresponsability.Black .up.|> org.example.behavioral.chainofresponsability.ApprovalLoanChain
  org.example.behavioral.chainofresponsability.Black o-- org.example.behavioral.chainofresponsability.ApprovalLoanChain : next
  org.example.behavioral.chainofresponsability.CardChain .up.|> org.example.behavioral.chainofresponsability.ApprovalLoanChain
  org.example.behavioral.chainofresponsability.CardChain o-- org.example.behavioral.chainofresponsability.ApprovalLoanChain : next
  org.example.behavioral.chainofresponsability.Gold .up.|> org.example.behavioral.chainofresponsability.ApprovalLoanChain
  org.example.behavioral.chainofresponsability.Gold o-- org.example.behavioral.chainofresponsability.ApprovalLoanChain : next
  org.example.behavioral.chainofresponsability.Platinium .up.|> org.example.behavioral.chainofresponsability.ApprovalLoanChain
  org.example.behavioral.chainofresponsability.Platinium o-- org.example.behavioral.chainofresponsability.ApprovalLoanChain : next


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
